- fixing UI on mobile and desktop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,20 +20,35 @@ header {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 20px;
   font-family: "Lato", sans-serif;
   font-weight: 500;
   line-height: 1.2;
   white-space: pre;
+  word-wrap: break-word;
+  text-align: center;
 }
 
-h3 {
-  font-size: 20px;
+h2 {
+  font-size: 16px;
   font-family: "Lato", sans-serif;
   font-weight: 500;
   letter-spacing: -0.3px;
   line-height: 1.2;
   white-space: pre;
+  text-wrap: normal;
+  text-align: center;
+}
+
+h3 {
+  font-size: 12px;
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  letter-spacing: -0.3px;
+  line-height: 1.2;
+  white-space: pre;
+  text-wrap: normal;
+  text-align: center;
 }
 
 h4 {
@@ -42,6 +57,8 @@ h4 {
   font-weight: 400;
   line-height: 1.2;
   white-space: pre;
+  text-wrap: normal;
+  text-align: center;
 }
 
 h5 {
@@ -50,6 +67,8 @@ h5 {
   font-weight: 400;
   line-height: 1.2;
   white-space: pre;
+  text-wrap: normal;
+  text-align: center;
 }
 
 @media(min-width: 640px) {
@@ -62,18 +81,21 @@ h5 {
     font-size: 44px;
     font-family: "Lato", sans-serif;
     font-weight: 500;
+    text-align: left;
   }
 
   h3 {
     font-size: 28px;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
+    text-align: left;
   }
   
   h4 {
     font-size: 28px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    text-align: left;
   }
 
   h5 {
@@ -82,6 +104,7 @@ h5 {
     font-weight: 400;
     line-height: 1.2;
     white-space: pre;
+    text-align: left;
   }
 
   header {
